fixed titles on mobile

--- a/src/components/node/NodePanelInner/styles.scss
+++ b/src/components/node/NodePanelInner/styles.scss
@@ -49,6 +49,13 @@
   font: $font_24_semibold;
   // height: 24px;
   padding-bottom: 6px;
+
+  @include tablet {
+    font-size: 16px;
+    word-break: break-word;
+    padding-bottom: 0;
+    padding-top: 10px;
+  }
 }
 
 .name {
